Issue #279  topic switcher items wrap for mobile

--- a/docroot/sites/all/themes/informea.theme/css/style-from-less.css
+++ b/docroot/sites/all/themes/informea.theme/css/style-from-less.css
@@ -899,6 +899,8 @@
   display: -ms-flexbox;
   -js-display: flex;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 [dir] .pane-geographic-region-region-switch-topic .nav-tabs {
   border: none;
